[gd_scene load_steps=7 format=3 uid="uid://d1wlc67jikjsd"]

[ext_resource type="Script" path="res://Base_game/Info_Scenes/Left_Case_Info.gd" id="1_sqbco"]
[ext_resource type="Texture2D" uid="uid://qwiekq6dmv2g" path="res://assets/ER_textures/pinboard/RCaseinfoTexture.png" id="2_28clf"]
[ext_resource type="FontFile" uid="uid://tm3cqhd2r5il" path="res://assets/fonts/Chaparral Pro Regular.ttf" id="3_nj0wn"]
[ext_resource type="Texture2D" uid="uid://csnsixfqnju4d" path="res://assets/Button_textures/exit_button.png" id="4_1e1d6"]
[ext_resource type="Texture2D" uid="uid://bqtp0fa1qj0sd" path="res://assets/ER_textures/pinboard/koch.png" id="5_s4476"]
[ext_resource type="Texture2D" uid="uid://bkwqr1a4a1lj0" path="res://assets/ER_textures/pinboard/messer.png" id="6_cs560"]

[node name="L_Case_Info" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqbco")

[node name="LCaseInfoText" type="Sprite2D" parent="."]
position = Vector2(905, 1064.98)
rotation = 1.5708
scale = Vector2(0.540742, 0.523677)
texture = ExtResource("2_28clf")

[node name="L_PP1_Text" type="Label" parent="LCaseInfoText"]
anchors_preset = -1
anchor_left = 0.138
anchor_top = 0.352
anchor_right = 0.86
anchor_bottom = 0.676
offset_left = -1670.7
offset_top = -1614.3
offset_right = -2159.7
offset_bottom = -632.83
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_nj0wn")
theme_override_font_sizes/font_size = 100
text = "Transkription Zeugenbericht:

Befragte Person: Portier
Datum der Befragung: 12.03.1903

befragte Person gab volgende Auskünfte:

- Befragter gab an sich für den gesammten Abend 
im Eingangsbereich aufgehalten zu haben
- befragte Person gab an im Zeitraum von 19:30 bis 20:30
 4 Personen durch den Eingang kommen gesehen zu haben
- Gegen 21:00 hat der Portier einen Schuss vernommen, 
er behauptet er hätte die Richtung des Geräusches dem 
Ballsaal zugeordnet
- Nach 21:00 hat er keinen die Fronttür verlassen gesehen"
horizontal_alignment = 1

[node name="Exit_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 367.0
offset_top = 995.0
offset_right = 2367.0
offset_bottom = 2110.0
rotation = 1.5708
scale = Vector2(0.121, 0.121)
texture_normal = ExtResource("4_1e1d6")

[node name="Koch" type="Sprite2D" parent="."]
position = Vector2(1016, 955)
rotation = 1.5708
scale = Vector2(0.3, 0.248)
texture = ExtResource("5_s4476")

[node name="Messer" type="Sprite2D" parent="."]
position = Vector2(618, 1682)
rotation = 1.5708
scale = Vector2(0.2, 0.243)
texture = ExtResource("6_cs560")

[connection signal="pressed" from="Exit_button" to="." method="_on_exit_button_pressed"]
